# isaura

./: .flake8  .gitignore  .pre-commit-config.yml  BENCHMARK.md  README.md  cdk.py  env.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  setup.py
isaura/: __init__.py  base.py  cli.py  default.py  helpers.py  manage.py
isaura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
isaura/configs/: docker-compose.yml
isaura/core/: api.py  base.py  hdf5.py
isaura/dtypes/: numeric.py
isaura/fetch/: cloud.py  dev.py  interfaces.py  local.py
isaura/handle/: appender.py  io.py  mapper.py  merger.py  reader.py  remove.py  repacker.py  retyper.py  writer.py
isaura/manager/: migrate.py
isaura/register/: cloud.py  dev.py  local.py
isaura/utils/: requirements.py
src/isaura/blocs/: __init__.py  precalc.py
src/isaura/dtypes/: numeric.py
src/isaura/handle/: appender.py  io.py  mapper.py  reader.py  repacker.py  retyper.py
src/isaura/iac/: __init__.py  aws_precalc_stack.py
src/isaura/local/: __init__.py  mixins.py  models.py
src/isaura/routes/precalc/get/app/: handler.py  schema.py
src/isaura/routes/schemas/: common.py
src/isaura/routes/status/: __init__.py
src/isaura/routes/status/get/: __init__.py
src/isaura/routes/status/get/app/: __init__.py  handler.py
src/isaura/service/: client.py
src/isaura/utils/: aws.py  dirs.py  logging.py
