[tool.poetry]
name = "isaura"
version = "0.10.0"
description = "Isaura data lake for pre-computed Ersilia properties"
authors = ["Ersilia "]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.8"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
aws-lambda-powertools = { extras = ["pydantic"], version = "^2.2.0" }
loguru = "^0.6.0"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.6.0"
darglint = "^1.8.1"
"aws-cdk-lib" = "^2.50.0"
virtualenv = "^20.16.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
