[project]
name = "isaura"
version = "0.1.0"
description = "A lake of precalculated properties of biomedical entities based on the Ersilia Model Hub"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Miquel Duran Frigola", email = "miquel@ersilia.io" },
  { name = "Abel Legese Shibiru", email = "abel@ersilia.io" },
]
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.17.1",
    "pymilvus>=2.6.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "rich-click>=1.8.9",
    "ruff>=0.12.9",
    "tqdm>=4.67.1",
]
[project.scripts]
nns = "isaura.cli:cli"

[tool.setuptools.packages.find]
include = ["isaura*"]
exclude = ["files*", "tests*", "docs*"]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"